@@ -1,3 +1,13 @@
+2007-10-22 Takuro Ashie <ashie@homa.ne.jp>
+
+	* src/uitls_auto_comp.[ch]: Renamed from src/auto_completion.[ch]
+	* src/dnd.[ch]: Renamed from src/utils_dnd.[ch]
+	* plugins/thumbnail_view/detailview.c, src/gimv_comment_view.c,
+	  src/gimv_image_view.c, src/gtkutils.c,  src/gimv_thumb_view_album.c,
+	  src/gimv_thumb_win.c, src/Makefile.am, src/gimv_dir_view.c,
+	  src/gimv_thumb_view.c:
+	Follow the change.
+
 2007-10-21 Takuro Ashie <ashie@homa.ne.jp>
 
 	* src/gimv_dir_view.[ch]: GObjectize.
